--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "pwa-chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
+            "url": "https://jardelmoraes.github.io/Neumorphism-Login-Sign-Up-JardelMoraes/",
             "webRoot": "${workspaceFolder}"
         }
     ]
